# osupp

./: LICENSE  README.md  get_version.py  pyproject.toml
src/osupp/: config.py  core.py  difficulty.py  performance.py  util.py
tests/: 3477131.osu  4103079.osu  4364723.osu  4429119.osu  4434797.osu  osu_test.py  test_diff_and_perf.py  test_mods.py  test_osupp.py
